--- a/v3/Dockerfile
+++ b/v3/Dockerfile
@@ -6,7 +6,6 @@ WORKDIR /datas
 Volume /datas
 COPY master ./
 COPY slave ./
-RUN cp -r $WHICH/my.cnf /etc/my.cnf
+RUN cp  $WHICH/my.cnf /etc/my.cnf
 EXPOSE 3336
 CMD bash
-
