to#1234 fix no dir 	modified:   v4/Dockerfile 	new file:   v5/Dockerfile 	new file:   v5/master/my.cnf 	new file:   v5/slave/my.cnf 	new file:   v6/Dockerfile 	new file:   v6/master/my.cnf 	new file:   v6/slave/my.cnf

--- a/v6/Dockerfile
+++ b/v6/Dockerfile
@@ -1,8 +1,6 @@
 FROM mysql:5.6
 ENV WHICH="master" "MYSQL_ROOT_PASSWORD"="mysqlmM"
-RUN echo 'hello' \
-&& mkdir /datas 
-WORKDIR /datas
+RUN echo 'hello' 
 Volume /datas
-COPY ./ ./
-EXPOSE 3336
+EXPOSE 3337
+CMD mysqld
