--- a/v8/master/mysql/mysql.cnf
+++ b/v8/master/mysql/mysql.cnf
@@ -1,4 +1,4 @@
-# Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -13,12 +13,6 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
 
-#
-# The MySQL  Server configuration file.
-#
-# For explanations see
-# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
-
 [mysqld]
 #
 server_id=3336
@@ -29,13 +23,13 @@ binlog_format=mixed
 expire_logs_days=7
 slave_skip_errors=1062
 
+# The MySQL  Server configuration file.
 #
-pid-file        = /var/run/mysqld/mysqld.pid
-socket          = /var/run/mysqld/mysqld.sock
-datadir         = /var/lib/mysql
-secure-file-priv= NULL
-# Disabling symbolic-links is recommended to prevent assorted security risks
-symbolic-links=0
+# For explanations see
+# http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
-# Custom config should go here
+# * IMPORTANT: Additional settings that can override those from this file!
+#   The files must end with '.cnf', otherwise they'll be ignored.
+#
 !includedir /etc/mysql/conf.d/
+!includedir /etc/mysql/mysql.conf.d/
